--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^7.0.6",
     "pdfkit": "^0.13.0",
     "pg": "^8.16.0",
     "swagger-jsdoc": "^6.2.8",
